Thu Sep 28 16:53:14 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * bin\MakeProjectCreator\config\ciao_executionmanager_stub.mpb
        * bin\MakeProjectCreator\config\ciao_plan_generator.mpb
        Added the base projects for executionmanager_stub and plan_generator.

Thu Sep 28 14:46:43 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * bin/diff-builds.pl:

          Updated to fix temporary files creation. Now all those are put
          in the temporary files directory. Fixed the ability to compare
          just two dates.

Thu Sep 28 13:35:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-hpux-11.00.h:
          Removed ACE_HAS_EXPLICIT_STATIC_TEMPLATE_MEMBER_INSTANTIATION that
          was set for gcc, with this define set the ACE library doesn't
          build.

        * ace/CDR_Stream.cpp:
          Initialise pointer with 0

        * ace/TP_Reactor.{h,inl}:
          Changed owner from int to bool.

Wed Sep 27 21:18:04 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Synch_Options.h: Corrected the table of possible Use_Reactor,
          Timeout combinations - it was reversed.

        * ace/WFMO_Reactor.{h cpp}: Change the delete_signal_handler_,
          delete_timer_queue_, delete_handler_rep_, delete_notify_handler_,
          and open_for_business_ members from int to bool to more
          accurately reflect their nature as yes/no indicators.
          Also, initialize notify_handler_ to 0 in constructors to avoid
          a UMR warning from Purify.

Wed Sep 27 06:28:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_static_compile.pl:
          Added protocols directory

Tue Sep 26 09:49:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/dynamicany.mpb:
          Derive from valuetype, needed to get AbstractBase::_nil() in a no
          inline build.
