@@ -1,3 +1,8 @@
+Thu Sep 28 19:37:13 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>
+
+        * bin/diff-builds.pl:
+          Fixed the finding of the nearest earlier build for a given date.
+
 Thu Sep 28 16:53:14 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>
 
         * bin\MakeProjectCreator\config\ciao_executionmanager_stub.mpb
